# steFile

./: .gitignore  CMakeLists.txt  README.md  makefile
images/: something.ste
include/: SNLogger.h  createSteFile.h  main.h  steFile.h  windowApplicationSteFile.h
rawImageFiles/: snakeHead.txt  snakeHeadClosed.txt  snakeHeadOpen.txt  snakeHeadSemiOpen.txt
src/: SNLogger.c  createSteFile.c  main.c  steFile.c  windowApplicationSteFile.c
